urule-core/src/main/java/com/bstek/urule/dsl/RuleParserParser.java
// Generated from RuleParser.g4 by ANTLR 4.5.3
package com.bstek.urule.dsl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RuleParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, COUNT=71, AVG=72, SUM=73, MAX=74, 
		MIN=75, AND=76, OR=77, Datatype=78, GreaterThen=79, GreaterThenOrEquals=80, 
		LessThen=81, LessThenOrEquals=82, Equals=83, NotEquals=84, EndWith=85, 
		NotEndWith=86, StartWith=87, NotStartWith=88, In=89, NotIn=90, Match=91, 
		NotMatch=92, EqualsIgnoreCase=93, NotEqualsIgnoreCase=94, ARITH=95, NUMBER=96, 
		Boolean=97, Identifier=98, STRING=99, WS=100, NL=101, COMMENT=102, LINE_COMMENT=103;
	public static final int
		RULE_ruleSet = 0, RULE_ruleSetHeader = 1, RULE_ruleSetBody = 2, RULE_rules = 3, 
		RULE_functionImport = 4, RULE_packageDef = 5, RULE_resource = 6, RULE_importParameterLibrary = 7, 
		RULE_importVariableLibrary = 8, RULE_importConstantLibrary = 9, RULE_importActionLibrary = 10, 
		RULE_functionDef = 11, RULE_functionParameters = 12, RULE_functionParameter = 13, 
		RULE_ruleDef = 14, RULE_loopRuleDef = 15, RULE_loopTarget = 16, RULE_loopStart = 17, 
		RULE_loopEnd = 18, RULE_attribute = 19, RULE_loopAttribute = 20, RULE_salienceAttribute = 21, 
		RULE_effectiveDateAttribute = 22, RULE_expiresDateAttribute = 23, RULE_enabledAttribute = 24, 
		RULE_debugAttribute = 25, RULE_activationGroupAttribute = 26, RULE_agendaGroupAttribute = 27, 
		RULE_autoFocusAttribute = 28, RULE_ruleflowGroupAttribute = 29, RULE_left = 30, 
		RULE_condition = 31, RULE_namedConditionSet = 32, RULE_namedCondition = 33, 
		RULE_decisionTableCellCondition = 34, RULE_refName = 35, RULE_refObject = 36, 
		RULE_nullValue = 37, RULE_conditionLeft = 38, RULE_expEval = 39, RULE_expAll = 40, 
		RULE_expExists = 41, RULE_expCollect = 42, RULE_commonFunction = 43, RULE_exprCondition = 44, 
		RULE_expressionBody = 45, RULE_percent = 46, RULE_leftParen = 47, RULE_rightParen = 48, 
		RULE_colon = 49, RULE_join = 50, RULE_right = 51, RULE_other = 52, RULE_actions = 53, 
		RULE_action = 54, RULE_assignAction = 55, RULE_outAction = 56, RULE_methodInvoke = 57, 
		RULE_functionInvoke = 58, RULE_actionParameters = 59, RULE_beanMethod = 60, 
		RULE_complexValue = 61, RULE_parameter = 62, RULE_parameterName = 63, 
		RULE_constant = 64, RULE_variable = 65, RULE_namedVariable = 66, RULE_property = 67, 
		RULE_variableCategory = 68, RULE_namedVariableCategory = 69, RULE_constantCategory = 70, 
		RULE_value = 71, RULE_op = 72;
	public static final String[] ruleNames = {
		"ruleSet", "ruleSetHeader", "ruleSetBody", "rules", "functionImport", 
		"packageDef", "resource", "importParameterLibrary", "importVariableLibrary", 
		"importConstantLibrary", "importActionLibrary", "functionDef", "functionParameters", 
		"functionParameter", "ruleDef", "loopRuleDef", "loopTarget", "loopStart", 
		"loopEnd", "attribute", "loopAttribute", "salienceAttribute", "effectiveDateAttribute", 
		"expiresDateAttribute", "enabledAttribute", "debugAttribute", "activationGroupAttribute", 
		"agendaGroupAttribute", "autoFocusAttribute", "ruleflowGroupAttribute", 
		"left", "condition", "namedConditionSet", "namedCondition", "decisionTableCellCondition", 
		"refName", "refObject", "nullValue", "conditionLeft", "expEval", "expAll", 
		"expExists", "expCollect", "commonFunction", "exprCondition", "expressionBody", 
		"percent", "leftParen", "rightParen", "colon", "join", "right", "other", 
		"actions", "action", "assignAction", "outAction", "methodInvoke", "functionInvoke", 
		"actionParameters", "beanMethod", "complexValue", "parameter", "parameterName", 
		"constant", "variable", "namedVariable", "property", "variableCategory", 
		"namedVariableCategory", "constantCategory", "value", "op"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'import'", "';'", "'.'", "'.*'", "'importParameterLibrary'", "'importVariableLibrary'", 
		"'importConstantLibrary'", "'importActionLibrary'", "'function'", "'('", 
		"')'", "'{'", "'}'", "','", "'rule'", "'\\u89c4\\u5219'", "'end'", "'\\u7ed3\\u675f'", 
		"'loopRule'", "'\\u5faa\\u73af\\u89c4\\u5219'", "'loopTarget'", "'\\u5faa\\u73af\\u5bf9\\u8c61'", 
		"'loopStart'", "'\\u5f00\\u59cb\\u524d\\u52a8\\u4f5c'", "'loopEnd'", "'\\u7ed3\\u675f\\u540e\\u52a8\\u4f5c'", 
		"'loop'", "'\\u5141\\u8bb8\\u5faa\\u73af\\u89e6\\u53d1'", "'='", "'salience'", 
		"'\\u4f18\\u5148\\u7ea7'", "'effective-date'", "'\\u751f\\u6548\\u65f6\\u95f4'", 
		"'\\u751f\\u6548\\u65e5\\u671f'", "'expires-date'", "'\\u5931\\u6548\\u65f6\\u95f4'", 
		"'\\u5931\\u6548\\u65e5\\u671f'", "'enabled'", "'\\u6fc0\\u6d3b'", "'\\u542f\\u7528'", 
		"'debug'", "'\\u8c03\\u8bd5'", "'\\u5141\\u8bb8\\u8c03\\u8bd5'", "'activation-group'", 
		"'\\u6fc0\\u6d3b\\u7ec4'", "'agenda-group'", "'\\u8bae\\u7a0b\\u7ec4'", 
		"'auto-focus'", "'\\u81ea\\u52a8\\u83b7\\u53d6\\u7126\\u70b9'", "'ruleflow-group'", 
		"'\\u89c4\\u5219\\u6d41\\u7ec4'", "'if'", "'\\u5982\\u679c'", "'null'", 
		"'eval'", "'all'", "'exist'", "'collect'", "'%'", "':'", "'then'", "'\\u90a3\\u4e48'", 
		"'else'", "'\\u5426\\u5219'", "'out'", "'@'", "'parameter'", "'\\u53c2\\u6570'", 
		"'!'", "'$'", "'count'", "'avg'", "'sum'", "'max'", "'min'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "COUNT", 
		"AVG", "SUM", "MAX", "MIN", "AND", "OR", "Datatype", "GreaterThen", "GreaterThenOrEquals", 
		"LessThen", "LessThenOrEquals", "Equals", "NotEquals", "EndWith", "NotEndWith", 
		"StartWith", "NotStartWith", "In", "NotIn", "Match", "NotMatch", "EqualsIgnoreCase", 
		"NotEqualsIgnoreCase", "ARITH", "NUMBER", "Boolean", "Identifier", "STRING", 
		"WS", "NL", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RuleParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RuleParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RuleSetContext extends ParserRuleContext {
		public RuleSetHeaderContext ruleSetHeader() {
			return getRuleContext(RuleSetHeaderContext.class,0);
		}
		public RuleSetBodyContext ruleSetBody() {
			return getRuleContext(RuleSetBodyContext.class,0);
		}
		public RuleSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleSet; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleParserVisitor ) return ((RuleParserVisitor<? extends T>)visitor).visitRuleSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleSetContext ruleSet() throws RecognitionException {
		RuleSetContext _localctx = new RuleSetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ruleSet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			ruleSetHeader();
			setState(147);
			ruleSetBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleSetHeaderContext extends ParserRuleContext {
		public List<ResourceContext> resource() {
			return getRuleContexts(ResourceContext.class);
		}
		public ResourceContext resource(int i) {
			return getRuleContext(ResourceContext.class,i);
		}
		public List<FunctionImportContext> functionImport() {
			return getRuleContexts(FunctionImportContext.class);
		}
		public FunctionImportContext functionImport(int i) {
			return getRuleContext(FunctionImportContext.class,i);
		}
		public RuleSetHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleSetHeader; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleParserVisitor ) return ((RuleParserVisitor<? extends T>)visitor).visitRuleSetHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleSetHeaderContext ruleSetHeader() throws RecognitionException {
		RuleSetHeaderContext _localctx = new RuleSetHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ruleSetHeader);
		int _la;
		try {
			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) {
					{
					{
					setState(149);
					resource();
					}
					}
					setState(154);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(155);
					functionImport();
					}
					}
					setState(160);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) {
					{
					{
					setState(161);
					resource();
					}
					}
					setState(166);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(167);
					functionImport();
					}
					}
					setState(172);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(173);
					functionImport();
					}
					}
					setState(178);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) {
					{
					{
					setState(179);
					resource();
					}
					}
					setState(184);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleSetBodyContext extends ParserRuleContext {
		public List<RulesContext> rules() {
			return getRuleContexts(RulesContext.class);
		}
		public RulesContext rules(int i) {
			return getRuleContext(RulesContext.class,i);
		}
		public RuleSetBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleSetBody; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleParserVisitor ) return ((RuleParserVisitor<? extends T>)visitor).visitRuleSetBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleSetBodyContext ruleSetBody() throws RecognitionException {
		RuleSetBodyContext _localctx = new RuleSetBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ruleSetBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__15) | (1L << T__18) | (1L << T__19))) != 0)) {
				{
				{
				setState(187);
				rules();
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext {
		public RuleDefContext ruleDef() {
			return getRuleContext(RuleDefContext.class,0);
		}
		public LoopRuleDefContext loopRuleDef() {
			return getRuleContext(LoopRuleDefContext.class,0);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleParserVisitor ) return ((RuleParserVisitor<? extends T>)visitor).visitRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rules);
		try {
			setState(195);
			switch (_input.LA(1)) {
			case T__14:
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(193);
				ruleDef();
				}
				break;
			case T__18:
			case T__19:
				enterOuterAlt(_localctx, 2);
				{
				setState(194);
				loopRuleDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionImportContext extends ParserRuleContext {
		public PackageDefContext packageDef() {
			return getRuleContext(PackageDefContext.class,0);
		}
		public FunctionImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionImport; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleParserVisitor ) return ((RuleParserVisitor<? extends T>)visitor).visitFunctionImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionImportContext functionImport() throws RecognitionException {
		FunctionImportContext _localctx = new FunctionImportContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionImport);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			match(T__0);
			setState(198);
			packageDef(0);
			setState(200);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(199);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDefContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(RuleParserParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(RuleParserParser.Identifier, i);
		}
		public PackageDefContext packageDef() {
			return getRuleContext(PackageDefContext.class,0);
		}
		public PackageDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleParserVisitor ) return ((RuleParserVisitor<? extends T>)visitor).visitPackageDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDefContext packageDef() throws RecognitionException {
		return packageDef(0);
	}

	private PackageDefContext packageDef(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PackageDefContext _localctx = new PackageDefContext(_ctx, _parentState);
		PackageDefContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_packageDef, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(211);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(203);
				match(Identifier);
				}
				break;
			case 2:
				{
				setState(204);
				match(Identifier);
				setState(207); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(205);
						match(T__2);
						setState(206);
						match(Identifier);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(209); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(217);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new PackageDefContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_packageDef);
					setState(213);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(214);
					match(T__3);
					}
					} 
				}
				setState(219);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ResourceContext extends ParserRuleContext {
		public ImportVariableLibraryContext importVariableLibrary() {
			return getRuleContext(ImportVariableLibraryContext.class,0);
		}
		public ImportActionLibraryContext importActionLibrary() {
			return getRuleContext(ImportActionLibraryContext.class,0);
		}
		public ImportConstantLibraryContext importConstantLibrary() {
			return getRuleContext(ImportConstantLibraryContext.class,0);
		}
		public ImportParameterLibraryContext importParameterLibrary() {
			return getRuleContext(ImportParameterLibraryContext.class,0);
		}
		public ResourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleParserVisitor ) return ((RuleParserVisitor<? extends T>)visitor).visitResource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResourceContext resource() throws RecognitionException {
		ResourceContext _localctx = new ResourceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_resource);
		try {
			setState(224);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(220);
				importVariableLibrary();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(221);
				importActionLibrary();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(222);
				importConstantLibrary();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 4);
				{
				setState(223);
				importParameterLibrary();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportParameterLibraryContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(RuleParserParser.STRING, 0); }
		public ImportParameterLibraryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importParameterLibrary; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleParserVisitor ) return ((RuleParserVisitor<? extends T>)visitor).visitImportParameterLibrary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportParameterLibraryContext importParameterLibrary() throws RecognitionException {
		ImportParameterLibraryContext _localctx = new ImportParameterLibraryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_importParameterLibrary);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(226);
			match(T__4);
			setState(227);
			match(STRING);
			setState(229);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(228);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportVariableLibraryContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(RuleParserParser.STRING, 0); }
		public ImportVariableLibraryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importVariableLibrary; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleParserVisitor ) return ((RuleParserVisitor<? extends T>)visitor).visitImportVariableLibrary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportVariableLibraryContext importVariableLibrary() throws RecognitionException {
		ImportVariableLibraryContext _localctx = new ImportVariableLibraryContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_importVariableLibrary);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(231);
			match(T__5);
			setState(232);
			match(STRING);
			setState(234);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(233);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
